<resources>
    <string name="app_name">Tourist AR</string>
    <string name="app_intro">This app is a playground for Augmented Reality functionality around
        ARCore from Google. Currently mainly based around the image marker functionality.\n\n

        It allows to capture marker images, crop them and try them out on the spot, to make sure
        the captured images are actually usable for the ARCore recognition engine.\n\n

        Next step is to provide simple authoring functionality to define areas on the marker image
        and place interactive elements to sketch out some scene ideas, that can then be implemented
        for a specific application.\n\n

        When required functionality is available, this app will be provided as a browser app.
    </string>
    <string name="splash_image_desc">Collage of locations in Iwami Ginzan</string>
    <string name="req_header">The application needs your approval to access the following features of
        your device.</string>
    <string name="arcore_cap">Augmented reality (AR) functionality runs on ARCore, which is provided
        by Google LLC and governed by the Google Privacy Policy. ARCore can be installed for free from
        Play store. It allows to place 3D objects into the real world as if they\'re really there.</string>
    <string name="arcore_cap_not_capable">Unfortunately, your phone isn\'t able to run ArCore.
        AR scenes will be partially available as 3D models.</string>
    <string name="arcore_cap_deactivated">ARCore is deactivated</string>
    <string name="arcore_cap_unknown">ARCore is deactivated because its status couldn\'t be
        determined.</string>
    <string name="arcore_cap_not_installed">ARCore needs to be installed.</string>
    <string name="arcore_cap_too_old">ARCore needs to be updated</string>
    <string name="arcore_cap_ready">Full augmented reality experience available</string>
    <string name="arcore_cap_btn_install">Install ARCore</string>
    <string name="arcore_cap_btn_not_capable">Install ARCore</string>
    <string name="arcore_cap_btn_deactivated">Deactivated</string>
    <string name="arcore_cap_btn_unknown">Deactivated</string>
    <string name="arcore_cap_btn_not_installed">Install</string>
    <string name="arcore_cap_btn_too_old">Update</string>
    <string name="arcore_cap_btn_ready">Ready</string>
    <string name="arcore_cap_btn_installing">Installing…</string>
    <string name="arcore_no_btn_title">Use ARCore</string>
    <string name="camera_req">The camera requirement is needed for the ARCore preview. Image
        processing is handled locally, no images are sent back over the network</string>
    <string name="camera_req_btn">Approve camera access</string>
    <string name="camera_req_btn_approved">Approved</string>
    <string name="camera_req_btn_unnecessary">Unnecessary</string>
    <string name="storage_req">Images and settings are stored in files on the public local storage
        of the device in a folder called \'TouristAR\'. Other locations on the device aren\'t
        accessed
    </string>
    <string name="storage_req_btn">Approve storage access</string>
    <string name="storage_req_btn_approved">Approved</string>
    <string name="APPROVE_IN_SETTINGS_TITLE">Approve in application settings</string>
    <string name="actionbar_show_intro">Show Intro</string>
    <string name="actionbar_location_list_title">Locations</string>
    <string name="actionbar_marker_list_title">Markers</string>
    <string name="actionbar_area_list_title">Areas</string>
    <string name="actionbar_preferences">Preferences</string>
    <string name="actionbar_about">About</string>
    <string name="actionbar_feedback">Feedback</string>
    <string name="actionbar_location_delete">Delete Location</string>
    <string name="actionbar_marker_delete">Delete Marker</string>
    <string name="actionbar_markerlist_load_title">Load</string>
    <string name="actionbar_markerlist_ar_title">AR</string>
    <string name="menu_location_edit">Edit</string>
    <string name="actionbar_area_delete">Delete Area</string>
    <string name="navigation_splash_label">AR Author</string>
    <string name="navigation_welcome_label">Welcome</string>
    <string name="navigation_location_list_label">Locations</string>
    <string name="navigation_location_edit_label">Edit Location</string>
    <string name="navigation_marker_list_label">Markers</string>
    <string name="navigation_marker_edit_label">Edit Marker</string>
    <string name="navigation_image_preview_label">Marker preview</string>
    <string name="navigation_touch_preview_label">Touch preview</string>
    <string name="navigation_area_list_label">Areas</string>
    <string name="navigation_area_edit_label">Edit Area</string>
    <string name="navigation_crop_image_label">Crop image</string>
    <string name="navigation_web_view_label">Web View</string>
    <string name="navigation_panorama_view_label">Panorama</string>
    <string name="navigation_permission_view_label">Permissions</string>
    <string name="navigation_preference_view_label">Preferences</string>
    <string name="navigation_ar_replacement_view_label">Simulated AR</string>
    <string name="location_image_desc">Image representing the location of this card</string>
    <string name="location_menu_desc">Location item menu</string>
    <string name="location_load_desc">Location load menu</string>
    <string name="location_edit_header">Location</string>
    <string name="location_edit_hint_name">Name</string>
    <string name="location_edit_hint_desc">Description</string>
    <string name="location_edit_hint_thumb">Thumb Path</string>
    <string name="location_edit_thumb_desc">Button to select a location thumbnail file</string>
    <string name="location_edit_hint_intro">Intro Path</string>
    <string name="location_edit_intro_desc">Intro Path</string>
    <string name="location_edit_save">Save Location</string>
    <string name="location_edit_cancel">Cancel</string>
    <string name="location_info_button_desc">Button to open info about locations</string>
    <string name="location_info_label">Locations</string>
    <string name="location_info_title">Info</string>
    <string name="location_info_primary">Location</string>
    <string name="location_info_secondary">More or less just an organisational structure to combine
        several AR scenes together for easy access. This can be a statue in your neighbourhood or
        a tour through a historical town.\n\n
        You can import additional locations through the search button below.
    </string>
    <string name="location_search_primary">Search Location</string>
    <string name="location_search_secondary">Here you can select a location to import into the
        location list. From there you can download the related media files needed for this location.
        \n\nThe list loads kinda slow right now. Will fix with an upcoming version.</string>
    <string name="location_search_loaded_check_desc">related location already imported</string>
    <string name="location_size_label">Size: </string>
    <string name="locationthumb_placeholder">/module_asset/location/images/placeholderthumb.webp</string>
    <string name="marker_info_label">Markers</string>
    <string name="marker_info_title">Info</string>
    <string name="marker_info_button_desc">Button to open info about Markers</string>
    <string name="marker_info_primary">Marker</string>
    <string name="marker_info_secondary">Markers are needed to define the current location, needed
        to overlay the correct informationon top of the camera image.\n\nA good marker contains
        many distinct features and has a square shape.
    </string>
    <string name="marker_image">Marker Image</string>
    <string name="marker_image_desc">Marker image for ARCore</string>
    <string name="marker_image_back_desc">Visual background for Marker image</string>
    <string name="marker_edit_tab_marker">Marker</string>
    <string name="marker_edit_tab_info">Info</string>
    <string name="marker_edit_tab_area">Area</string>
    <string name="marker_edit_button_crop">Crop</string>
    <string name="marker_edit_button_import">import</string>
    <string name="marker_edit_button_capture">capture</string>
    <string name="marker_edit_select_location">Select Location</string>
    <string name="marker_edit_title">Title</string>
    <string name="marker_edit_place">Place</string>
    <string name="marker_edit_widthinm">Width in m</string>
    <string name="marker_edit_check_visual_background">Show Virtual Background</string>
    <string name="marker_edit_visual_background_image">Virtual Background Image</string>
    <string name="marker_edit_info_intro">Introduction</string>
    <string name="marker_edit_info_object_type">Select Objecttype</string>
    <string name="marker_edit_info_built_in">Built in</string>
    <string name="marker_edit_area_Button_add">Add Area</string>
    <string name="area_info_primary">Area</string>
    <string name="area_info_secondary">Content is displayed to the user through areas</string>
    <string name="area_info_title">Info</string>
    <string name="actionbar_arealist_load_title">Load</string>
    <string name="actionbar_arealist_ar_title">AR</string>
    <string name="area_image">Marker Image</string>
    <string name="area_background_image_desc">Background for Area icon for selected Marker</string>
    <string name="area_image_desc">Area icon for selected Marker</string>
    <string name="area_card_labelx">X</string>
    <string name="area_card_labely">Y</string>
    <string name="area_card_labelz">Z</string>
    <string name="area_card_labelw">W</string>
    <string name="area_card_accept_desc">Accept changes of Card</string>
    <string name="button_grab_desc">Grab AR content to device</string>
    <string name="button_image_desc">Show product images</string>
    <string name="button_video_desc">Play promo video</string>
    <string name="image_alternative_desc">Interactive image for use in AR scene</string>
    <string name="repo_marker_name_no_group">Without Group</string>
    <string name="marker_edit_error_select_location">Please select a Location</string>
    <string name="marker_list_error_create_marker">No Marker to test exists</string>
    <string name="display_converter_from_vector3">displayFromVector3</string>
    <string name="display_converter_from_quaternion">displayFromQuaternion</string>
    <string name="display_converter_from_selection">displayFromSelection</string>
    <string name="allow_edit_pref">allow_edit</string>
    <string name="import_marker_images_pref">import_marker_images</string>
    <string name="import_default_database_pref">import_default_database</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_location_nara">Nara</string>
    <string name="title_location_iwamiginzan">Iwami Ginzan</string>
    <string name="title_location_izumotaisha">Module Title</string>
</resources>