<!--
    ARTester - AR for tourists by tourists
    Copyright (C) 2018  Michael Vogt

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionbar_show_intro"
        android:title="@string/actionbar_show_intro"
        app:showAsAction="never" />
    <group android:id="@+id/actionbar_group_settings">
        <item
            android:id="@+id/actionbar_preferences"
            android:title="@string/actionbar_preferences" />
    </group>
    <group android:id="@+id/actionbar_group_feedback">
        <item
            android:id="@+id/actionbar_feedback"
            android:title="@string/actionbar_feedback"
            app:showAsAction="never" />
    </group>
</menu>