<!--
    ARTester - AR for tourists by tourists
    Copyright (C) 2018, 2019  Michael Vogt

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="handler"
            type="eu.michaelvogt.ar.author.fragments.adapters.LocationListAdapter" />

        <variable
            name="location"
            type="eu.michaelvogt.ar.author.data.Location" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/location_card"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="8dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/location_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/location_image_desc"
                android:scaleType="centerCrop"

                card_view:imageUrl="@{location.isLoaded == true ? location.thumbPath : @string/locationthumb_placeholder}"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:placeholder="@{@drawable/placeholderthumb}" />

            <TextView
                android:id="@+id/location_title"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="#4cffffff"
                android:fontFamily="serif"
                android:gravity="center_vertical|start"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@{location.name}"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Title"
                android:textSize="24sp"
                android:textStyle="bold"
                card_view:layout_constraintEnd_toEndOf="@+id/location_image"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintStart_toStartOf="@+id/location_image"
                card_view:layout_constraintTop_toTopOf="@+id/location_image"
                tools:text="石見銀山" />

            <ImageButton
                android:id="@+id/location_menu"
                android:layout_width="44dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:background="#7fff"
                android:contentDescription="@string/location_menu_desc"
                android:visibility="@{handler.isEditEnabled(location.loaded)}"

                card_view:layout_constraintBottom_toBottomOf="@+id/location_title"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="@+id/location_title"
                card_view:srcCompat="@drawable/ic_edit_black_24dp" />

            <ImageButton
                android:id="@+id/location_load"
                android:layout_width="44dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:background="#7fff"
                android:contentDescription="@string/location_load_desc"
                android:visibility="@{location.loaded ? View.GONE : View.VISIBLE}"

                card_view:layout_constraintBottom_toBottomOf="@+id/location_title"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="@+id/location_title"
                card_view:srcCompat="@drawable/ic_file_download_black_24dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>